--- a/ecm252/flutter/gerenciamento_de_estado/pubspec.yaml
+++ b/ecm252/flutter/gerenciamento_de_estado/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   email_validator: "^2.1.16"
+  rxdart: ^0.27.7
+  cherry_toast: ^1.6.4
 
 dev_dependencies:
   flutter_test:
